Fix aligns the edge of the logo with icon

--- a/src/main.scss
+++ b/src/main.scss
@@ -39,7 +39,7 @@
     @include for-left-collapse() {
       width: 54px;
       padding-left: 5px;
-      padding-right: 5px;
+      padding-right: 3px;
     }
   }
 
